fix footer height on mobile devices

--- a/app/_assets/stylesheets/base.less
+++ b/app/_assets/stylesheets/base.less
@@ -20,6 +20,10 @@ body {
   @media (min-width: 800px) {
     padding-top: 69px;
   }
+
+  @media (max-width: 650px) {
+    margin-bottom: 264px;
+  }
 }
 
 .no-subscribe-section {
