--- a/app/_assets/stylesheets/pages/homepage.less
+++ b/app/_assets/stylesheets/pages/homepage.less
@@ -220,7 +220,7 @@
     color: @gray-dark;
     margin-top: 1px;
     border: 0 none;
-    padding: 9px 0 9px 20px;
+    padding: 9px 10px 9px 20px;
     border-radius: 0;
 
     &:last-child {
